# dropdown-parser

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
dropdown_parser/: __init__.py  cli.py  dropdown_parser.py  utils.py
tests/: test.docx  test_check_docx_type.py  test_doc.xml  test_exporters.py  test_get_docx_xml.py  test_get_file_name_from_path.py
