[tool.poetry]
name = "dropdown-parser"
version = "0.1.0"
description = ""
authors = ["StephenODea54 <odeastephen1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.1"
pandas = "^2.1.3"
click = "^8.1.7"
lxml = "^4.9.3"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dropdown_parser = "dropdown_parser.cli:cli"
